<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/hogwarts_logo"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hogwarts_motto"
            android:textColor="@color/colorSecondaryText"
            android:textStyle="italic"
            android:textSize="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:gravity="center"/>

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:paddingRight="10dp">

            <!--Table header-->
            <TextView
                android:id="@+id/tv_house"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="3dp"
                android:text="@string/house"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold" />

            <!--Row mascot-->
            <TableRow  android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginRight="5dp"
                    android:text="@string/mascot"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryText" />
                <TextView
                    android:id="@+id/tv_mascot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:maxLines="1"
                    android:text=" "
                    android:textStyle="italic"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14dp"
                    android:layout_weight="7"/>
            </TableRow>

            <!--Row headOfHouse-->
            <TableRow  android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginRight="5dp"
                    android:text="@string/head_of_house"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryText" />
                <TextView
                    android:id="@+id/tv_head_of_house"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:maxLines="1"
                    android:text=" "
                    android:textStyle="italic"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14dp"
                    android:layout_weight="7"/>
            </TableRow>

            <!--Row houseGhost-->
            <TableRow  android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginRight="5dp"
                    android:text="@string/house_ghost"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryText" />
                <TextView
                    android:id="@+id/tv_house_ghost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:maxLines="1"
                    android:text=" "
                    android:textStyle="italic"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14dp"
                    android:layout_weight="7"/>
            </TableRow>

            <!--Row founder-->
            <TableRow  android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginRight="5dp"
                    android:text="@string/colmn_founder"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryText" />
                <TextView
                    android:id="@+id/tv_founder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:maxLines="1"
                    android:text=" "
                    android:textStyle="italic"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14dp"
                    android:layout_weight="7"/>
            </TableRow>

            <!--Row school-->
            <TableRow  android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginRight="5dp"
                    android:text="@string/school"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryText" />
                <TextView
                    android:id="@+id/tv_school"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:maxLines="1"
                    android:text=" "
                    android:textStyle="italic"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14dp"
                    android:layout_weight="7"/>
            </TableRow>

            <!--Row values-->
            <TableRow  android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginRight="5dp"
                    android:text="@string/values"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryText" />
                <TextView
                    android:id="@+id/tv_values"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:maxLines="1"
                    android:text=" "
                    android:textStyle="italic"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14dp"
                    android:layout_weight="7"/>
            </TableRow>

            <!--Row colours-->
            <TableRow  android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginRight="5dp"
                    android:text="@string/colours"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryText" />
                <TextView
                    android:id="@+id/tv_colours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:maxLines="1"
                    android:text=" "
                    android:textStyle="italic"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14dp"
                    android:layout_weight="7"/>
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="start"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="3dp"
            android:text="@string/members"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <include layout="@layout/shimmer_layout"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="0dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>