<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_spell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="3dp"
                android:text="@string/spell"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/tv_spell"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="2dp"
                android:maxLines="1"
                android:text="@string/spell_type"
                android:textStyle="italic"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14dp"/>

            <TextView
                android:id="@+id/tv_effect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_type"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="0dp"
                android:text="@string/spell_effect"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14dp"
                android:textStyle="italic" />

            <View
                android:id="@+id/name_holder"
                android:layout_width="4dp"
                android:layout_height="40dp"
                android:background="@color/placeholder_color"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>